# graphic_graphic_2d

./: .clang-format  .gitignore  22855.diff  22855.diff:Zone.Identifier  29810.diff  3027.diff  AGENTS.md  BUILD.gn  CLAUDE.md  CODEOWNERS  GPATH  GTAGS  HgmFrameRateManager_分析.md  OAT.xml  README.md  README_zh.md  ace_platforms.gni  branch.txt  bundle.json  copy_arkui_adapters.py  corner.diff  default.scss  diff.diff  diff.patch  flutter.gni  graphic.cfg  graphic.rc  graphic_config.gni  hisysevent.yaml  msy.patch  ohos.build  perftest.patch  q  xxb.patch  xxx  多层离屏Canvas矩阵计算优化.md
frameworks/bootanimation/: BUILD.gn  bootanimation.cfg
frameworks/bootanimation/data/: bootanimation_custom_config.json
frameworks/bootanimation/etc/: bootanimation.para
frameworks/bootanimation/include/: boot_animation.h  boot_animation_config.h  boot_animation_controller.h  boot_animation_factory.h  boot_animation_operation.h  boot_animation_strategy.h  boot_animationconfig.h  boot_associative_display_strategy.h  boot_compatible_display_strategy.h  boot_compile_progress.h  boot_compileprogress.h  boot_independent_display_strategy.h  boot_picture_player.h  boot_player.h  boot_sound_player.h  boot_video_player.h  boot_videoplayer.h  log.h  util.h
frameworks/bootanimation/src/: boot_animation.cpp  boot_animation_controller.cpp  boot_animation_operation.cpp  boot_animation_strategy.cpp  boot_animationconfig.cpp  boot_associative_display_strategy.cpp  boot_compatible_display_strategy.cpp  boot_compile_progress.cpp  boot_compileprogress.cpp  boot_independent_display_strategy.cpp  boot_picture_player.cpp  boot_sound_player.cpp  boot_video_player.cpp  boot_videoplayer.cpp  main.cpp  raw_parser.cpp  util.cpp
frameworks/bootanimation/test/: BUILD.gn
frameworks/bootanimation/utils/: BUILD.gn  boot_animation_utils.cpp
frameworks/opengl_wrapper/: BUILD.gn  EGL.versionscript
frameworks/opengl_wrapper/include/: egl_hook_entries.in  gl4_all_entries.in  gl4_hook_entries.in  hook.h  thread_private_data_ctl.h  wrapper_hook_entries.in  wrapper_log.h
frameworks/opengl_wrapper/src/: egl_hook_entries.in  hook.h  thread_private_data.cpp  thread_private_data.h  thread_private_data_ctl.cpp  wrapper_hook_entries.in  wrapper_log.h
frameworks/opengl_wrapper/test/: debug_layer_test1.cpp  debug_layer_test2.cpp  main.cpp  opengl_wrapper_native_test.cpp
frameworks/surfaceimage/: BUILD.gn
frameworks/surfaceimage/include/: surface_image.h
frameworks/surfaceimage/src/: native_image.cpp  surface_image.cpp
frameworks/surfaceimage/test/: BUILD.gn
frameworks/text/: BUILD.gn  config.gni  rosen_text.versionscript
frameworks/text/service/: BUILD.gn
frameworks/text/test/: BUILD.gn
frameworks/text/utils/: text_histogram.h  text_log.h  text_trace.h
frameworks/vulkan_layers/: BUILD.gn
frameworks/vulkan_layers/include/: swapchain_layer_log.h
frameworks/vulkan_layers/swapchain_layer/: VkLayer_swapchain.json  swapchain_layer.cpp
frameworks/vulkan_layers/test/: BUILD.gn
frameworks/vulkan_layers/trace3d/: VkLayer_Trace3D.json
frameworks/vulkan_layers/utils/: vk_layer_extension_utils.cpp  vk_layer_extension_utils.h
graphic_test/graphic_test/: BUILD.gn  render_service_render_profiler_test.cpp
graphic_test/graphic_test/rs_effect_feature/: effect_appearance_spherize_test.cpp  effect_background_blender_test.cpp  effect_background_blur_test.cpp  effect_background_effect_test.cpp  effect_content_effectnode_test.cpp  effect_distort_chroma_test.cpp  effect_fg_dynamiclightup_test.cpp  effect_linear_gradient_blur_test.cpp  effect_pixel_stretch_test.cpp  parameters_defination.h
graphic_test/graphic_test/rs_perform_ohr/: playback_recover_test.cpp
graphic_test/graphic_test/test_template/: test_template.cpp  test_template_five.cpp  test_template_four.cpp  test_template_image.cpp  test_template_nine.cpp  test_template_three.cpp
graphic_test/graphic_test_framework/: BUILD.gn  build_resource_to_bytecode.py
graphic_test/graphic_test_framework/include/: rs_graphic_errors.h  rs_graphic_rootnode.h  rs_graphic_test.h  rs_graphic_test_director.h  rs_graphic_test_ext.h  rs_graphic_test_img.h  rs_graphic_test_profiler.h  rs_graphic_test_profiler_thread.h  rs_graphic_test_text.h  rs_graphic_test_utils.h  rs_parameter_parse.h
graphic_test/graphic_test_framework/resource/: test.data
graphic_test/graphic_test_framework/src/: rs_graphic_rootnode.cpp  rs_graphic_test.cpp  rs_graphic_test_director.cpp  rs_graphic_test_ext.cpp  rs_graphic_test_img.cpp  rs_graphic_test_main.cpp  rs_graphic_test_profiler.cpp  rs_graphic_test_profiler_thread.cpp  rs_graphic_test_text.cpp  rs_graphic_test_utils.cpp  rs_parameter_parse.cpp
rosen/modules/2d_graphics/: 2d_graphics.versionscript  BUILD.gn  README.md
rosen/modules/composer/: BUILD.gn
rosen/modules/create_pixelmap_surface/: BUILD.gn
rosen/modules/frame_analyzer/: BUILD.gn  frame_analyzer_module_introduction_agent.md
rosen/modules/frame_load/: BUILD.gn  frame_load_module_introduction_agent.md
rosen/modules/frame_report/: BUILD.gn
rosen/modules/glfw_render_context/: BUILD.gn
rosen/modules/graphics_effect/: BUILD.gn
text/: BUILD.gn  config.gni
text/adapter/skia/: BUILD.gn
text/service/: BUILD.gn
utils/color_manager/: BUILD.gn
utils/gl_utils/: BUILD.gn
utils/lex_yacc/: lex_yacc.gni
utils/option_parser/: BUILD.gn
utils/raw_maker/: BUILD.gn
utils/socketpair/: BUILD.gn
utils/vulkan_shell/: BUILD.gn  vulkan_application.cpp  vulkan_application.h  vulkan_backbuffer.cpp  vulkan_backbuffer.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug_report.cpp  vulkan_debug_report.h  vulkan_device.cpp  vulkan_device.h  vulkan_handle.h  vulkan_hilog.h  vulkan_image.cpp  vulkan_image.h  vulkan_interface.cpp  vulkan_interface.h  vulkan_native_surface.h  vulkan_native_surface_ohos.cpp  vulkan_native_surface_ohos.h  vulkan_proc_table.cpp  vulkan_proc_table.h  vulkan_provider.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_swapchain_stub.cpp  vulkan_utilities.cpp  vulkan_utilities.h  vulkan_window.cpp  vulkan_window.h
(+11142 files in other folders)
