# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/utils/wmlayout/wmlayout.gni")
import("graphic_config.gni")

group("default") {
  public_deps = [ ":graphic.rc" ]

  if (graphic_2d_feature_bootanimation_enable) {
    public_deps += [ "frameworks/bootanimation:bootanimation" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_para" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_pics" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_sounds" ]
    public_deps += [ "frameworks/bootanimation:bootanimation_video" ]
  }
}

group("graphic_common_test") {
  testonly = true

  public_deps = [
    "frameworks/bootanimation/test:test",
    "frameworks/opengl_wrapper/test:test",
    "frameworks/vulkan_layers/test:test",
    "rosen/modules/composer:test",
    "rosen/modules/effect/test/unittest:test",
    "rosen/modules/graphics_effect/test:test",
    "rosen/test/frame_analyzer:test",
    "rosen/test/frame_report:test",
    "rosen/test/hyper_graphic_manager:test",
    "rosen/test/render_frame_trace:test",
    "rosen/test/render_service:test",
    "rosen/test/texgine:test",
    "utils/buffer_handle:test",
    "utils/color_manager:test",
    "utils/socketpair:test",
    "utils/sync_fence:test",
  ]
  if (graphic_2d_feature_enable_vulkan) {
    public_deps -= [ "frameworks/opengl_wrapper/test:test" ]
  }
}

## Install graphic.rc to /system/etc/init/graphic.rc {{{
ohos_prebuilt_etc("graphic.rc") {
  source = "graphic.cfg"
  relative_install_dir = "init"
  part_name = "graphic_2d"
  subsystem_name = "graphic"
}

## Install graphic.rc to /system/etc/init/graphic.rc }}}

group("libfence") {
  public_deps = [ "frameworks/fence:libfence" ]
}

group("libgl") {
  public_deps = libgl
}

group("libvulkan") {
  public_deps = libvulkan
}

group("libnative_image") {
  public_deps = [ "frameworks/surfaceimage:libnative_image" ]
}

group("libbootanimation_utils") {
  public_deps = [ "frameworks/bootanimation/utils:libbootanimation_utils" ]
}
