# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


use_mingw_win = "${current_os}_${current_cpu}" == "mingw_x86_64"
ace_root = "//foundation/arkui/ace_engine"
graphic_2d_root = "//foundation/graphic/graphic_2d"
ace_platforms = []

_ace_adapter_dir = rebase_path("$graphic_2d_root/adapter", root_build_dir)
_adapters = exec_script("$ace_root/build/search.py", [ _ace_adapter_dir ], "list lines")
foreach(item, _adapters) {
  import_var = {
  }
  import_var = {
    import("$graphic_2d_root/adapter/$item/build/platform.gni")
  }

  if (defined(import_var.platforms)) {
    foreach(platform, import_var.platforms) {
      if (!is_arkui_x ||
          (is_arkui_x && defined(platform.cross_platform_support) &&
           platform.cross_platform_support)) {
        if (defined(platform.name)) {
          ace_platforms += [ platform ]
        }
      }
    }
  }
}
